# secure_file_sender

./: .$SFS_usecase.drawio.bkp  .$secure_file_sender.drawio.bkp  .gitignore  Cargo.toml  Docker-Compose.yaml  Libraries.md  README.md  Secure File Sender.docx  Sequence diagram of .LeafFactory() of -secure_file_sender.py.mmd  aaa  capture_dockerfile  character set raw.txt  character sets.txt  function_keys.txt  index.html  node_dockerfile  p2p_tutorial_client.py  p2p_tutorial_client.py.backup  p2p_tutorial_server.py  rendezvous_server.py  requirements.txt  secure_file_sender.drawio  secure_file_sender.py  secure_file_sender.py.backup  secure_file_sender_Communication.py  secure_file_sender_Leaf.py  secure_file_sender_Ultrapeer.py  subprocess_manager.py
I AM GOING TO KILL MYSELF/: 1520  5896  leaf.py  sfs.py  ultrapeer.py
I am going insane/: config.py  crypto_utils.py  leaf_node.py  network_utils.py  p2p_main.py  ultrapeer_node.py
python_old/: p2p_tutorial_client.py  secure_file_sender.py  secure_file_sender.py.backup  temp.py
secure_file_sender/: leaf.py  requirements.txt  sfs.py  ultrapeer.py
src/: cli.rs  event_handler.rs  main.rs  screens.rs
terminal_output/: node_2_output.txt
traffic_capture/: traffic.pcap
wierd attempt/: secure_file_sender.py  secure_file_sender_Communication.py  secure_file_sender_Leaf.py  secure_file_sender_TUI.py  secure_file_sender_Ultrapeer.py
