[package]
name = "secure_file_sender"
version = "0.1.0"
edition = "2021"

[dependencies]
libp2p = "0.55.0"
serde = {version = "1.0.219", features = ["derive"] }
serde_json = "1.0.138"
once_cell = "1.21.1"
log = "0.4.25"
pretty_env_logger = "0.5.0"
sha256 = "1.5.0"
array2d = "0.3.2"
inline_colorization = "0.1"
termios = "0.3"
termsize = "0.1"
tokio = { version = "1.43", features = ["full"] }
tokio-stream = "0.1"
crossterm = "0.28.1"
signal-hook = "0.3.17"
ctrlc = "3.4.5"
